[gd_scene load_steps=7 format=3 uid="uid://qwmvd7e6eg3q"]

[ext_resource type="Script" uid="uid://cg6v4siq56o75" path="res://player.gd" id="1_4flbx"]
[ext_resource type="Texture2D" uid="uid://c5v052eyfwgtg" path="res://images-removebg-preview.png" id="2_onrkg"]
[ext_resource type="PackedScene" uid="uid://b45jjp5hotgq0" path="res://enemy/enemy.tscn" id="3_i3pqv"]
[ext_resource type="Script" uid="uid://b7k2jpkik8416" path="res://enemy/health.gd" id="4_hqtel"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_4flbx"]
friction = 0.0

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_4flbx"]

[node name="Player" type="RigidBody3D"]
physics_material_override = SubResource("PhysicsMaterial_4flbx")
lock_rotation = true
script = ExtResource("1_4flbx")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_4flbx")

[node name="TwistPivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="PitchPivot" type="Node3D" parent="TwistPivot"]
transform = Transform3D(1, 0, 0, 0, 0.9848077, 0.17364818, 0, -0.17364818, 0.9848077, 0, 0, 0)

[node name="Camera3D" type="Camera3D" parent="TwistPivot/PitchPivot"]
transform = Transform3D(1, 0, 0, 0, 0.9824699, -0.18642116, 0, 0.18642116, 0.9824699, 0, 0, 0)

[node name="Control" type="Control" parent="TwistPivot/PitchPivot/Camera3D"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="TwistPivot/PitchPivot/Camera3D/Control"]
layout_mode = 0
offset_right = 20.0
offset_bottom = 20.0
texture = ExtResource("2_onrkg")
expand_mode = 1

[node name="PunchRayCast" type="RayCast3D" parent="TwistPivot/PitchPivot/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 0.99999994, 0, 0, 0, 0.99999994, 0, -0.8538367, -0.078365006)
enabled = false
target_position = Vector3(0, 0, -2)

[node name="RayCastFloor" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.021376133, -0.94811946, 0)
target_position = Vector3(0, -0.2, 0)

[node name="RayCastTop" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -1.9795196, 1.509958e-07, 0, -2.9889915e-07, -1, 0, 0.6489182, -4.171727e-08)
target_position = Vector3(0, -0.5, 0)

[node name="HealthComponent" parent="." instance=ExtResource("3_i3pqv")]
script = ExtResource("4_hqtel")
max_health = 100.0

[node name="health" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0

[node name="RayCruched" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.045327425, 0)
target_position = Vector3(0, 0.4, 0)
